fixed image, added ingredients.

--- a/recipes/Irish_Beef.html
+++ b/recipes/Irish_Beef.html
@@ -6,8 +6,36 @@
     </head>
     <body>
         <h1>St. Paddy's Irish Beef Dinner</h1>
-        <img src="https://images.app.goo.gl/cR58QybyEgrN4dYy5">
+        <img src="../images/ShepardsPie.webp"
+        width="300"
+        height="300">
+        <h1>Description</h1>
+        <h4>This recipe is a very special one to me. 
+            It is a recipe that my wife and i picked out of one of our cook books and decided to throw together one evening.
+             We had never made this before but when we were both in the kitchen preparing it it was as if we were experts making it for the 100th time.
+            After making it we had both decided that it was a masterpiece and we were so satisfied with our teamwork on this dish.
+        </h4>
+        <h1>Ingredients</h1>
+        <ul>
+            <li>2 Medium yukon gold potatoes</li>
+            <li>2 Small parsnips</li>
+            <li>3/4lb lean ground beef</li>
+            <li>1 Medium onion, chopped</li>
+            <li>2 Cups finely shredded cabbage</li>
+            <li>2 Medium carrots, halved and sliced</li>
+            <li>1 tsp dried thyme</li>
+            <li>1 tsp Worcestershire sauce</li>
+            <li>1 Tbsp all-purpose flour</li>
+            <li>1/4 Cup tomato paste</li>
+            <li>1 Can reduced sodium chicken or beef broth</li>
+            <li>1/2 Cup frozen peas (optional)</li>
+            <li>3/4 Tsp salt</li>
+            <li>1/2 Tsp pepper</li>
+            <li>1/4 Cup 2% milk</li>
+            <li>1 Tbsp butter</li>
 
+        </ul>
+        
 
 
 
