Added steps to irish beef. made page for butter chicken

--- a/recipes/Irish_Beef.html
+++ b/recipes/Irish_Beef.html
@@ -33,8 +33,20 @@
             <li>1/2 Tsp pepper</li>
             <li>1/4 Cup 2% milk</li>
             <li>1 Tbsp butter</li>
-
         </ul>
+        <h1>Directions</h1>
+        <ol>
+            <li>Peel potatoes and parsnips and cut into large pieces; place in a large saucepan or pot and cover with water.
+                Bring to a boil. Reduce heat; cover and cook for 10-15 minutes or until tender. Drain.
+            </li>
+            <li>In a large skillet, cook beef and onion over medium heat until meat is no longer pink; crumble the beef; drain. Stir in cabbage, carrots, thyme,
+                and Worcestershire sauce.
+            </li>
+            <li>In a small bowl, combine flour, tomato paste and broth until smooth. Gradually stir into the meat mixture. Bring to a boil. Reduce heat; cover and simmer 15-20 
+                minutes or until vegetables are tender. Stir in the peas, 1/4 tsp salt and 1/4 tsp pepper.
+            </li>
+            <li>Drain potatoes and parsnips; mash with milk, butter and the remaining 1/2 tsp salt and 1/4 tsp pepper. Serve with meat mixture.</li>
+        </ol>
         
 
 
