added most of recipe and ingredients to Butter Chicken

--- a/recipes/Irish_Beef.html
+++ b/recipes/Irish_Beef.html
@@ -47,13 +47,10 @@
             </li>
             <li>Drain potatoes and parsnips; mash with milk, butter and the remaining 1/2 tsp salt and 1/4 tsp pepper. Serve with meat mixture.</li>
         </ol>
+        <h1>1 Serving</h1>
+        <h4>369cal., 11g fat, 62mg chol, 849mg sod, 46g carb (13g sugars, 8g fiber), 24g protean.</h4>
         
-
-
-
-
-
-
+        <a href="../recipes/Butter_Chicken.html">Butter Chicken</a>
         <a href="../index.html">Home</a>
     </body>
 </html>
