added peanut butter cookie recipe with picture.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/Irish_Beef.html">St. Paddy's Irish Beef Dinner</a>
+    <ul>
+    <li><a href="recipes/Irish_Beef.html">St. Paddy's Irish Beef Dinner</a></li>
+    <li><a href="recipes/Butter_Chicken.html">Butter Chicken Curry</a></li>
+    <li><a href="recipes/Peanut_Butter_Cookies.html">Peanut Butter Cookies</a></li>
+    </ul>
 </body>
 </html>
