styled the page very basic

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-    <li><a href="recipes/Irish_Beef.html">St. Paddy's Irish Beef Dinner</a></li>
-    <li><a href="recipes/Butter_Chicken.html">Butter Chicken Curry</a></li>
-    <li><a href="recipes/Peanut_Butter_Cookies.html">Peanut Butter Cookies</a></li>
-    </ul>
+    <h1 class="title">Odin Recipes</h1>
+    <div class="buttoncontainer">
+    <button class="button one"><a href="recipes/Irish_Beef.html">St. Paddy's Irish Beef Dinner</a></button>
+    <button class="button two"><a href="recipes/Butter_Chicken.html">Butter Chicken Curry</a></button>
+    <button class="button three"><a href="recipes/Peanut_Butter_Cookies.html">Peanut Butter Cookies</a></button>
+    </div>
 </body>
 </html>
